--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -117,7 +117,10 @@
                        symétrie), vérifiées à l’aide d’instruments. Ils ont été entraînés au maniement de ces 
                        instruments (équerre, règle, compas, gabarit) sur des supports variés, pour construire 
                        des figures, en particulier pour le tracé de perpendiculaires et de parallèles à l’aide 
-                       de la règle et de l’équerre. Les travaux conduits en sixième prennent en compte les 
+                       de la règle et de l’équerre.
+                    </p>
+                    <p>
+                       Les travaux conduits en sixième prennent en compte les 
                        acquis antérieurs, évalués avec précision et obéissent à de nouveaux objectifs. Ils 
                        doivent viser d'une part à stabiliser les connaissances des élèves et d'autre part à les 
                        structurer, et peu à peu à les hiérarchiser. L'objectif d’initier à la déduction est 
