--- a/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/lycee.html.twig
@@ -45,7 +45,7 @@
                         <li>d’aider l’élève à construire son parcours de formation.</li>
                     </ul>
                     <p>
-                        Pour chaque partie du programme, les capacités attendues sont clairement identifiées et 
+                        Pour chaque partie du programme, <strong>les capacités attendues sont clairement identifiées</strong> et 
                         l’accent est mis systématiquement sur les types de problèmes que les élèves doivent 
                         savoir résoudre. L’acquisition de techniques est indispensable, mais doit être au 
                         service de la pratique du raisonnement qui est la base de l’activité mathématique des 
@@ -93,9 +93,82 @@
             
             <article id="tabs-2" class="light">
                 
-                <div class="contenu-simple">
+                <h1>PREMIÈRE</h1>
+                
+                <div class="introduction noborder">
                     <p>
-                        Selon votre choix de filière, les mathématiques auront une importance plus ou moins élevée. Il est recommandé fortement de consolider les bases via un soutien régulier en dehors des cours.
+                        Le cycle terminal des séries ES et L permet l'acquisition d'un bagage mathématique qui 
+                        favorise une adaptation aux différents cursus accessibles aux élèves, en développant 
+                        leur sens critique vis-à-vis des informations chiffrées et, plus largement, en les 
+                        formant à la pratique d'une démarche scientifique.
+                    </p>                   
+                    <p>
+                        L'apprentissage des mathématiques cultive des compétences qui facilitent une formation 
+                        tout au long de la vie et aident à mieux appréhender une société en évolution. Au-delà 
+                        du cadre scolaire, il s'inscrit dans une perspective de formation de l'individu.
+                    </p>                    
+                </div>
+                
+                <div class="bgblank">
+                    <p>L'enseignement de sciences en classe de première des séries économique et sociale ou 
+                        littéraire est d'abord conçu pour faire acquérir aux élèves une culture scientifique. 
+                        Ainsi cet enseignement scientifique a comme objectifs de permettre à l'élève :
+                    </p>
+                    <ul>
+                        <li>mettre en œuvre une recherche de façon autonome ;</li>
+                        <li>mener des raisonnements ;</li>
+                        <li>avoir une attitude critique vis-à-vis des résultats obtenus ;</li>
+                        <li>communiquer à l'écrit et à l'oral.</li>                        
+                    </ul>                    
+                </div>
+                
+                <div class="bgblankgrey"> 
+                    <p>
+                        Le programme s'inscrit, comme celui de la classe de seconde, dans le cadre de la résolution de problèmes.
+                    </p>
+                    <p>
+                        Les situations proposées répondent à des problématiques clairement identifiées 
+                        d'origine purement mathématique ou en lien avec d'autres disciplines. Un des 
+                        objectifs de ce programme est de doter les élèves d'outils mathématiques permettant 
+                        de traiter des problèmes relevant de la modélisation de phénomènes continus ou 
+                        discrets. Ainsi, on consolide l'ensemble des fonctions mobilisables, enrichi de deux 
+                        nouvelles fonctions de référence, la fonction racine carrée et la fonction cube.
+                    </p>
+                    <p>
+                        On introduit un nouvel outil : la dérivation. L'acquisition du concept de dérivée est 
+                        un point fondamental du programme de première. Les fonctions étudiées sont toutes 
+                        régulières et on se contente d'une approche intuitive de la notion de limite finie 
+                        en un point.
+                    </p>
+                    <p>
+                        En relation avec l'étude de phénomènes discrets, la maîtrise du traitement de données 
+                        numériques nécessite la manipulation aisée des pourcentages. Il convient sur ce sujet 
+                        de conforter les méthodes déjà rencontrées à l'aide de situations variées relevant par 
+                        exemple d'un contexte économique ou du traitement d'informations chiffrées fournies 
+                        par les médias.
+                    </p>
+                    <p>
+                        Dans de nombreux domaines, notamment l'économie ou les sciences sociales, on 
+                        s'intéresse à l'évolution de phénomènes qui peuvent être modélisés par une suite. 
+                        L'introduction de la notion de suite peut ainsi s'appuyer sur ces situations 
+                        concrètes en exploitant largement, dans des registres différents, les activités 
+                        algorithmiques et le tableur qui favorisent la compréhension de la notation 
+                        indicielle.
+                    </p>
+                </div>
+                
+                 <div class="bgblank">
+                    <p>
+                        Selon son choix d’orientation, les mathématiques auront une importance plus ou moins 
+                        élevée. L’élève doit faire preuve d’autonomie et s’investir de manière responsable 
+                        vis-à-vis des contraintes spécifiques à l’épreuve. Il est recommandé fortement de 
+                        consolider les bases et de s’entrainer régulièrement dans les conditions de l’épreuve.
+                    </p>                                      
+                </div>
+                
+                <div class="bgblankgrey"> 
+                    <p>
+                        L’élève ne l’exprimera pas forcement mais a besoin de se sentir soutenu.
                     </p>
                 </div>
                 
@@ -113,10 +186,147 @@
             
             <article id="tabs-3" class="light">
                 
-                <div class="contenu-simple">
+                <h1>TERMINALE</h1>
+                
+                <div class="introduction noborder">
                     <p>
-                        C’est l’année du bac, l’élève se doit d’obtenir de bons résultats qui détermineront ses différents choix d’orientations possibles (concours, classes préparatoires et autres)
+                        Le programme de terminale S s’inscrit dans la continuité de celui de première et il en 
+                        reprend de ce fait les éléments. La classe terminale signe la fin des études 
+                        secondaires ; son contenu doit donc répondre à une double exigence :
+                    </p>                   
+                    <ul>
+                        <li>s’inscrire dans la cohérence des connaissances transmises aux élèves dans leur cursus scolaire,</li>
+                        <li>ouvrir à des horizons neufs et variés.</li>                        
+                    </ul>                   
+                </div>
+                
+                <div class="bgblank">
+                    <p>
+                        Les formations supérieures sont naturellement diverses et offrent aux mathématiques une 
+                        place variable. Dans certaines filières, elles seront une matière centrale et pour 
+                        toutes un outil de modélisation et de calcul. La réussite des jeunes étudiants dépendra 
+                        donc crucialement de leur maîtrise des sciences mathématiques ; pour les préparer, 
+                        le programme prend en compte les évolutions de la discipline et différentes demandes 
+                        qui sont l’expression des besoins mathématiques croissants de notre société.
+                    </p>                                       
+                </div>
+                
+                <div class="bgblankgrey"> 
+                    <p>
+                        Les élèves à qui ce programme est destiné ont grandi dans un environnement technologique, 
+                        qui façonne leur comportement et leurs valeurs et crée des centres d’intérêt profondément 
+                        nouveaux. La puissance d’investigation des outils in- formatiques et l’existence de 
+                        calculatrices performantes dont la plupart des élèves disposent sont des progrès 
+                        bienvenus, et leur l’impact sur la pédagogie des mathématiques est considérable. Il faut 
+                        accompagner cette évolution, notamment en utilisant ces outils dans les phases de 
+                        découverte et d’observation par les élèves. Certains éléments (par exemple les équations 
+                        différentielles ou la statistique) apparaissent immédiatement utiles aux autres 
+                        disciplines scientifiques. Mais utile ne signifie pas utilitaire. Les mathématiques, 
+                        science du calcul, ne sont pas que cela, et il est important que les élèves comprennent 
+                        qu’elles sont aussi une école de rigueur qui exige une pensée claire. Il faut pour cela 
+                        maintenir l’équilibre entre l’entraînement au calcul et la réflexion, également 
+                        indispensables au progrès mathématique, et donc présenter, dans le cadre nécessairement 
+                        modeste du programme, des démonstrations qui nourrissent cette réflexion. Les élèves 
+                        pourront ainsi expliciter des raisonnements sans se limiter à quelques démarches 
+                        stéréotypées, voir clairement la différence entre ce qu’on établit et ce qui est 
+                        provisoirement admis et comprendre comment les mathématiques se construisent. 
+                    </p>                 
+                </div>
+                
+                 <div class="bgblank">
+                    <p>
+                        L’enseignement comprend trois grands chapitres
                     </p>
+                    
+                    <h2>Analyse</h2>
+                    
+                    <p>
+                        Deux objectifs majeurs fédèrent les éléments de ce chapitre : 
+                    </p>
+                    
+                    <ul>
+                        <li>
+                            l’extension du champ des suites et des fonctions vues en classe de première à quelques nouvelles fonctions classiques : 
+                            <ul>
+                                <li>exponentielles</li>
+                                <li>logarithmes</li>
+                                <li>trigonométriques (telle la fonction tangente) ou faisant intervenir des radicaux </li>
+                            </ul>
+                        </li>
+                        <li>
+                            l’initiation au calcul intégral et à la problématique des équations différentielles : 
+                            la présence de ces dernières, bien que modeste dans le libellé du programme, est 
+                            fondamentale pour amener à la compréhension de la puissance des mathématiques pour 
+                            la modélisation ; un travail conjoint avec les autres disciplines favorisera cet 
+                            objectif
+                        </li>                        
+                    </ul>
+                    
+                    <p>
+                        Une bonne maîtrise des fonctions classiques (dérivées, extrema, comportements 
+                        asymptotiques, courbes représentatives) est nécessaire ; elle doit permettre une 
+                        certaine aisance dans les problèmes qui les mettent en jeu. La notion de continuité 
+                        est introduite et permet de disposer du langage nécessaire pour énoncer les théorèmes 
+                        de façon satisfaisante. L’étude théorique de la continuité des fonctions classiques 
+                        est exclue. Dans le cadre de la résolution de problèmes, l’étude d’une fonction se 
+                        limitera le plus souvent à un intervalle. 
+                    </p>
+                </div>
+                
+                <div class="bgblankgrey">
+                    <h2>Géométrie</h2>
+                    <p>
+                        L’objectif de ce paragraphe est d’entretenir la pratique des objets usuels du plan et 
+                        de l’espace et de fournir quelques notions nouvelles permettant de parfaire l’approche 
+                        entreprise dans les classes antérieures sur la géométrie vectorielle ou repérée. 
+                        Dans le prolongement du repérage polaire introduit en première, les nombres complexes, 
+                        outre leur intérêt historique, algébrique et interdisciplinaire pour la poursuite des 
+                        études, fournissent un outil efficace dans les problèmes faisant intervenir les 
+                        transformations planes. 
+                    </p>
+                    <p>
+                        L’extension à l’espace du calcul vectoriel et du produit scalaire permet de résoudre de 
+                        nouveaux problèmes et, de ce fait, d’approfondir la vision de l’espace. Bien que, comme 
+                        dans les programmes antérieurs, le libellé de cette partie soit relativement concis, 
+                        on prendra le temps de mettre en œuvre toutes les connaissances de géométrie de 
+                        l’ensemble du cursus scolaire pour l’étude de configurations du plan ou de l’espace, 
+                        le calcul de distances, d’angles, d’aires et de volumes, etc. Ces travaux seront 
+                        répartis tout au long de l’année afin que les élèves acquièrent une certaine 
+                        familiarité avec le domaine géométrique ; on privilégiera les problèmes dont les 
+                        procédés de résolution peuvent avoir valeur de méthode et on entraînera les élèves 
+                        à choisir l’outil de résolution le plus pertinent parmi ceux dont ils disposent 
+                        (propriétés des configurations, calcul vectoriel, calcul barycentrique, transformations,
+                        nombres complexes, géométrie analytique). 
+                    </p>
+                </div>
+                
+                <div class="bgblank">
+                    <h2>Probabilités et Statistiques</h2>
+                    <p>
+                        On poursuit ici la présentation entreprise en seconde et en première des concepts fondamentaux 
+                        de probabilité dans le cas fini avec la notion de conditionnement et d’indépendance et 
+                        l’étude de quelques lois de probabilité. 
+                    </p>
+                </div>
+                
+                <div class="bgblankgrey"> 
+                    <p>
+                        La classe de Terminale constitue une étape importante dans la vie de l’élève. Le BAC en 
+                        est la consécration et sanctionne la fin d’un cycle. 
+                    </p>
+                    <p>
+                        Le programme et la charge de travail sont lourds. La gestion de son temps est un 
+                        facteur essentiel dans la préparation aux épreuves.
+                    </p>
+                    <p>
+                        L’assimilation du programme bien que nécessaire, n’est point suffisante, l’élève se doit 
+                        d’obtenir de très bon résultat pour ne pas diminuer ses possibilités d’orientation post 
+                        BAC (concours, classes préparatoires et autres).
+                    </p>
+                    <p>
+                        Les bases bien solidifiées seront le tremplin d’une brillante vie étudiante, nous 
+                        recommandons un soutien régulier individuel ainsi que des travaux de groupe.
+                    </p>                   
                 </div>
                 
                 <div class="text-center margin-top-medium">
