--- a/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
@@ -18,7 +18,7 @@
         
         <p class="header avenirNextItalic">
             A la faculté, l’étudiant a besoin d’accompagnement pour s’adapter à ce nouvel environnement où 
-            le professeur est concentré sur un groupe et non plus sur les individus.<br />
+            le professeur est concentré sur un groupe et non plus sur les individus.
             Il faut absolument être capable de suivre le groupe pour ne pas se retrouver très vite perdu.
         </p>
         
