connexion form, bug qcm

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -43,7 +43,7 @@
                         
                         <ul>
                             <li id="accueil"><a href="{{ path('msp_frontend_homepage') }}">ACCEUIL</a></li>                            
-                            <li><a href="{{ path('msp_math_plus') }}">MATH PLUS</a></li>
+                            <li><a href="http://mathsplusmaths4us.blogspot.fr/">MATH PLUS</a></li>
                             <li><a href="{{ path('msp_contact') }}">CONTACT</a></li>                                                      
                             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
                             <li>
