modification image niveau

--- a/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/college.html.twig
@@ -612,7 +612,7 @@
         
         </div>    
         <figure class="text-center">
-            <img src="{{ asset('/img/college.jpg') }}" alt="" />
+            <img src="{{ asset('/img/mathsup-college.jpg') }}" alt="collège - Mathsup" />
         </figure>
     </div>      
 {% endblock %}{# empty Twig template #}
