--- a/src/Msp/FrontendBundle/Resources/views/Page/institution.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/institution.html.twig
@@ -19,6 +19,10 @@
         <p class="header avenirNextItalic">
             Des cours de remise à niveau sont proposées pour différents objectifs préétablies
         </p>
-                        
+        
+        <figure class="text-center">
+            <img src="{{ asset('/img/mathsup-institution.jpg') }}" alt="institution - Mathsup" />
+        </figure>
+        
     </article>   
 {% endblock %}{# empty Twig template #}
