--- a/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/universite.html.twig
@@ -29,7 +29,7 @@
         </footer>
         
         <figure class="text-center">
-            <img src="{{ asset('/img/universite.jpg') }}" alt="" />
+            <img src="{{ asset('/img/mathsup-universite.jpg') }}" alt="université - Mathsup" />
         </figure>
         
     </article>       
