--- a/src/Msp/FrontendBundle/Resources/views/Page/primaire.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Page/primaire.html.twig
@@ -32,7 +32,7 @@
         </footer>
         
         <figure class="text-center">
-            <img src="{{ asset('/img/primaire.jpg') }}" alt="" />
+            <img src="{{ asset('/img/mathsup-primaire.jpg') }}" alt="primaire - Mathsup" />
         </figure>
         
     </article>    
