--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -119,7 +119,7 @@
             <footer>
                 
                 <div>
-                    <p>Copyright Â© 2013, MathSup. Tous droits réservés.</p>
+                    <p>Copyright © 2013, MathSup. Tous droits réservés.</p>
 
                     <ul>
                         <li><a href="{{ path('msp_faq') }}">FAQ /</a></li> 
