modification des liens d'ajout professeur et eleve

--- a/src/Msp/FrontendBundle/Resources/views/Eleve/index.html.twig
+++ b/src/Msp/FrontendBundle/Resources/views/Eleve/index.html.twig
@@ -117,7 +117,7 @@
     
     <ul class="inline">
         <li>
-            <a class="btn" href="{{ path("fos_user_registration_register") }}">
+            <a class="btn" href="{{ path("msp_eleve_inscription") }}">
                 Ajouter un élève <i class="icon-chevron-right"></i>
             </a>
         </li>
