Bug fix ie placeholder

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -152,6 +152,7 @@
             '@jquery_ui'
             '@bootstrap_js'
             '@MspFrontendBundle/Resources/public/js/a.javascript.js'
+            '@MspFrontendBundle/Resources/public/js/jquery.html5-placeholder-shim.js'
             %}
             <script type="text/javascript" src="http://{{ app.request.host }}{{ asset_url }}"></script>
             {% endjavascripts %}
